--- a/res/layout/task_item.xml
+++ b/res/layout/task_item.xml
@@ -6,7 +6,7 @@
 
     <ImageView
         android:id="@+id/taskImage"
-        android:layout_width="60dp"
+        android:layout_width="40dp"
         android:layout_height="60dp"
         android:layout_margin="10dp"
         android:background="#ff696969"/>
@@ -22,6 +22,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:singleLine="true"
             android:text="Task Name"
             android:textSize="14sp"/>
 
